--- a/cart.html
+++ b/cart.html
@@ -13,14 +13,17 @@
         <a href="Index.html">
         <h2>DraftStone</h2>
     </a>
+    <a href="cart.html">
         <div class="cart">
-            <a href="cart.html">
             <i class="bi bi-cart3"></i>
-            </a>
             <div id="cartAmount" class="cartAmount">0</div>
         </div>
+        </a>
+        </div>
+
+
         <div id="label" class="text-center"></div>
-        <div class="shop-cart" id="shopping-cart"></div>
+        <div class="shop-cart" id="ShopCart"></div>
 </body>
 <script src="src/data.js"></script>
 <script src="src/cart.js"></script>
